libview: Fix debug borders coordinate translation

This commit fixes two bugs in the drawing of borders for "text
selection" bounding boxes:

  1. Borders in document coordinates were being clipped using view
     coordinates.

  2. The document-to-view coordinate translation didn't take view
     rotation into account.

https://bugzilla.gnome.org/show_bug.cgi?id=785758